// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render multi bash texts 1`] = `
.c12 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c13 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c6 {
  display: flex;
}

.c11 .icon-check {
  display: none;
}

.c11 .icon-copy {
  display: block;
}

.c11.copied .icon-check {
  display: block;
}

.c11.copied .icon-copy {
  display: none;
}

.c10 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c1 {
  position: relative;
}

.c8 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              sudo tctl -c cfg-all users add --roles=access,editor george_washington
            </div>
          </div>
          <div
            class="c7 c8"
          >
            <button
              class="c9 c10"
              kind="secondary"
            >
              <div
                class="c11 icon-container"
              >
                <span
                  class="c12 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c12 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              sudo DEBUG=1 teleport start -c cfg-all -d
            </div>
          </div>
          <div
            class="c7 c8"
          >
            <button
              class="c9 c10"
              kind="secondary"
            >
              <div
                class="c11 icon-container"
              >
                <span
                  class="c12 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c12 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              yarn start-teleport-e --target=https://localhost:3080/web
            </div>
          </div>
          <div
            class="c7 c8"
          >
            <button
              class="c9 c10"
              kind="secondary"
            >
              <div
                class="c11 icon-container"
              >
                <span
                  class="c12 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c12 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render multi bash texts with comment 1`] = `
.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c6 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c14 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c7 {
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: block;
}

.c12.copied .icon-check {
  display: block;
}

.c12.copied .icon-copy {
  display: none;
}

.c5 {
  color: rgb(117 113 94 / 80%);
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c1 {
  position: relative;
}

.c9 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Download Teleport's PGP public key
        </div>
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              sudo curl https://apt.releases.teleport.dev/gpg \\
-o /usr/share/keyrings/teleport-archive-keyring.asc
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              kind="secondary"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c13 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              sudo DEBUG=1 teleport start -c cfg-all -d
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              kind="secondary"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c13 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c14"
      >
        <div
          class="c5"
        >
          Add the Teleport APT repository for v10. You'll need to update this
file for each major release of Teleport.
Note: if using a fork of Debian or Ubuntu you may need to use '$ID_LIKE'
and the codename your distro was forked from instead of '$ID' and '$VERSION_CODENAME'.

        </div>
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \\
https://apt.releases.teleport.dev/stable/v10" \\
| sudo tee /etc/apt/sources.list.d/teleport.list &gt; /dev/null
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              kind="secondary"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c13 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render non bash single text 1`] = `
.c12 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c6 {
  display: flex;
}

.c11 .icon-check {
  display: none;
}

.c11 .icon-copy {
  display: block;
}

.c11.copied .icon-check {
  display: block;
}

.c11.copied .icon-copy {
  display: none;
}

.c10 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c1 {
  position: relative;
}

.c8 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="text-to-copy"
            >
              some -c text to be copied and it is super long to test scrolling
            </div>
          </div>
          <div
            class="c7 c8"
          >
            <button
              class="c9 c10"
              kind="secondary"
            >
              <div
                class="c11 icon-container"
              >
                <span
                  class="c12 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c12 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render single bash text 1`] = `
.c12 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c6 {
  display: flex;
}

.c11 .icon-check {
  display: none;
}

.c11 .icon-copy {
  display: block;
}

.c11.copied .icon-check {
  display: block;
}

.c11.copied .icon-copy {
  display: none;
}

.c10 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c1 {
  position: relative;
}

.c8 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5 c6"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              sudo tctl -c cfg-all users add --roles=access,editor george_washington
            </div>
          </div>
          <div
            class="c7 c8"
          >
            <button
              class="c9 c10"
              kind="secondary"
            >
              <div
                class="c11 icon-container"
              >
                <span
                  class="c12 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c12 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render single bash text with comment 1`] = `
.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 0;
}

.c6 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding-right: 16px;
}

.c7 {
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: block;
}

.c12.copied .icon-check {
  display: block;
}

.c12.copied .icon-copy {
  display: none;
}

.c5 {
  color: rgb(117 113 94 / 80%);
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c3 {
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c1 {
  position: relative;
}

.c9 {
  position: absolute;
  right: 0px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          Add the Teleport API repository for v10. You'll need to update this.
        </div>
        <div
          class="c6 c7"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c2"
            >
              $
            </div>
            <div
              class="text-to-copy"
            >
              sudo tctl -c cfg-all users add --roles=access,editor george_washington
            </div>
          </div>
          <div
            class="c8 c9"
          >
            <button
              class="c10 c11"
              kind="secondary"
            >
              <div
                class="c12 icon-container"
              >
                <span
                  class="c13 icon icon-copy "
                  color="light"
                  data-testid="btn-copy"
                />
                <span
                  class="c13 icon icon-check "
                  color="light"
                  data-testid="btn-check"
                />
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
